--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,17 @@ body {
 }
 
 #box-container {
+    display: flex;
+    justify-content: center;
+    align-items:center;
     width: 600px;
     height: 300px;
     border: 2px solid black;
     background-color: white; /* optional */
+}
+
+#box-title {
+    width: 200px;
+    height:200px;
+
 }
